# lib_mysqludf_ta

./: .dockerignore  .dockertag  .gitignore  .travis.yml  ChangeLog  Dockerfile  GPL-LICENSE  MIT-LICENSE  Makefile.am  Makefile.in  README  README.DEV  README.md  README.txt  aclocal.m4  autogen.sh  build_packages.sh  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
dev/: build  client  data_up.sql  deploy  run  shell  test_window_functions.sql
examples/: mariadb10.2.crash  multiple_timeframes.txt  signals.txt
rpms/: lib_mysqludf_ta-0.1-1.el5.i386.rpm  lib_mysqludf_ta-0.1-1.el5.src.rpm  lib_mysqludf_ta-0.1-1.i386.rpm  lib_mysqludf_ta-debuginfo-0.1-1.el5.i386.rpm
setup/: lib_mysqludf_ta_atr_win_down.sql  lib_mysqludf_ta_atr_win_up.sql  lib_mysqludf_ta_ema_down.sql  lib_mysqludf_ta_ema_up.sql  lib_mysqludf_ta_max_down  lib_mysqludf_ta_max_down.sql  lib_mysqludf_ta_max_up  lib_mysqludf_ta_min_down.sql  lib_mysqludf_ta_min_up.sql  lib_mysqludf_ta_previous_down  lib_mysqludf_ta_previous_down.sql  lib_mysqludf_ta_previous_up  lib_mysqludf_ta_rsi_down  lib_mysqludf_ta_rsi_down.sql  lib_mysqludf_ta_rsi_up  lib_mysqludf_ta_rsi_win_down.sql  lib_mysqludf_ta_rsi_win_up.sql  lib_mysqludf_ta_sma_down  lib_mysqludf_ta_sma_down.sql  lib_mysqludf_ta_sma_up.sql  lib_mysqludf_ta_sma_win_down.sql  lib_mysqludf_ta_sma_win_up.sql  lib_mysqludf_ta_ssma_down.sql  lib_mysqludf_ta_ssma_up.sql  lib_mysqludf_ta_stddevp_down.sql  lib_mysqludf_ta_stddevp_up  lib_mysqludf_ta_sum_down.sql  lib_mysqludf_ta_sum_up.sql  lib_mysqludf_ta_tr_down  lib_mysqludf_ta_tr_down.sql  lib_mysqludf_ta_tr_up  lib_mysqludf_ta_tr_win_down.sql  lib_mysqludf_ta_tr_win_up.sql  mysqludf_ta_sample_down.sql  mysqludf_ta_sample_up.sql
specfile/: build.sh  lib_mysqludf_ta.spec  lib_mysqludf_ta.spec.autotools
src/: Makefile  db_install_lib_mysqludf_ta  db_uninstall_lib_mysqludf_ta  installdb  ta_atr_win.c  ta_ema.c  ta_libmysqludf_ta.h  ta_max.c  ta_min.c  ta_previous.c  ta_rsi.c  ta_rsi_win.c  ta_sample.c  ta_sma.c  ta_sma_win.c  ta_ssma.c  ta_stddevp.c  ta_sum.c  ta_tr.c  ta_tr_win.c
test/: 01_get_data.sh  02_load_data.sh  README  (+2 more)
(+15 files in other folders)
